GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/Voucher_yearly_allocation__c.object-meta.xml
<CustomObject>
    <label>Voucher yearly allocation</label>
    <nameField>
        <label>Name of the customer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voucher yearly allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>