GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/fields/Number_of_Additional_Vouchers_allocated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Vouchers_allocated__c</fullName>
    <label>Number of Additional Vouchers allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>