GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/fields/Number_of_Vouchers_gave__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vouchers_gave__c</fullName>
    <label>Number of Yearly Vouchers allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>