GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/fields/Reason_for_Additional_Voucher_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Additional_Voucher_Allocation__c</fullName>
    <label>Reason for Additional Voucher Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>