GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/fields/Total_number_of_vouchers_allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_vouchers_allocated__c</fullName>
    <formula>Number_of_First_Aid_allocated__c + Number_of_Vouchers_gave__c +  Number_of_Additional_Vouchers_allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number of vouchers allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>