GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Date</type>
</CustomField>