GearsetPOC/force-app/main/default/objects/Voucher_yearly_allocation__c/validationRules/Reason_for_Additional_Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Additional_Allocation</fullName>
    <active>true</active>
    <description>reason for additional allocation field is mandatory when additional allocation is given.</description>
    <errorConditionFormula>NOT(ISBLANK(Number_of_Additional_Vouchers_allocated__c))
&amp;&amp;
ISBLANK(Reason_for_Additional_Voucher_Allocation__c )</errorConditionFormula>
    <errorDisplayField>Reason_for_Additional_Voucher_Allocation__c</errorDisplayField>
    <errorMessage>Please enter the reason for additional vouchers being given</errorMessage>
</ValidationRule>